--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@font-face {
+  font-family: 'PlayfairRegular';
+  src: local('PlayfairRegular'), url(assets/fonts/PlayfairDisplay/PlayfairDisplay-Regular.ttf) format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
